# DSC180B-Q2

./: .env.example  .gitignore  .gitmodules  README.md  dp_vae_train.py  pyproject.toml
.github/workflows/: pages.yml
_archive/: README.md  build_table.py  dp_vae_train.py
_archive/dpvae/: dp_vae_train_hurdle.py
_archive/queries/: query12.py  query2.py  query4.py
data/: README.md
docs/: CLAUDE.md  README_IMPLEMENTATION.md  app.js  capstone.txt  chat-1.txt  chat-2.txt  chat-3.txt  data-summary.txt  dca-dictionary.txt  explore.html  index.html  index.md  methods.html  q2-report.tex  query-explorer.html  results.html  style.css  takeaways.html
dpvae/: dp_vae_train_hurdle.py  eval_dpvae.py  eval_real_vs_synth.ipynb
notebooks/: 01-data-exploration.ipynb  02-query-feasibility.ipynb  03-build-reporting-tables.ipynb  04-run-benchmark-queries.ipynb  05-dp-sgd.ipynb  06-private-evolution.ipynb  07-pe-chunk-analysis.ipynb  08-per-table-dpsgd.ipynb  09-mst-baseline.ipynb  10-consolidated-evaluation.ipynb  11-postprocess-additive.ipynb  12-hybrid-routing-additive.ipynb  13-wide-coverage-filter-additive.ipynb  14-pe-support-diagnostics-additive.ipynb  15-wide-filtered-dpsgd-additive.ipynb
report/: q1-report.tex  q2-proposal.tex  q2-report.tex  q2-report.toc  reference.bib
scripts/: README.md  compute_normalized_error.py  evaluate_pe.py  generate_report_data.py  pe_model_experiment.py  run_conditional_benchmark.py  run_midscale_benchmark.py  run_stratified_benchmark.py  run_vanilla_pe.py
site/: index.html  style.css
src/: README.md
tests/: README.md  test_benchmark.py  test_compare.py  test_decompose.py  test_distance.py  test_privacy.py
training/: q2_build_training_table.py
website/: _config.yml  index.html
(+299 files in other folders)
